...
      );
    }
  }

  return (
    <ScreenContainer>
      <View style={styles.screen} testID="prepare-offline-screen">
        <StackScreenHeader
          title="Prepare for Offline"
          subtitle={INSTRUCTION}
          onBack={goBack}
          subtitleLines={2}
        />
...
